<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_mypy</name>
  <version>0.1.0</version>
  <description>Generate stub files for the ROS2 interfaces in Python</description>
  <maintainer email="me@bonprosoft.com">Yuki Igarashi</maintainer>
  <maintainer email="otamachan@gmail.com">Tamaki Nishino</maintainer>
  <license>Apache License 2.0</license>
  <author email="me@bonprosoft.com">Yuki Igarashi</author>
  <author email="otamachan@gmail.com">Tamaki Nishino</author>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_py</buildtool_export_depend>
  <buildtool_export_depend>rosidl_pycommon</buildtool_export_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>rmw</build_export_depend>

  <exec_depend>rosidl_pycommon</exec_depend>
  <exec_depend>rosidl_cmake</exec_depend>
  <exec_depend>rosidl_generator_py</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>rmw</test_depend>
  <test_depend>rosidl_cmake</test_depend>
  <test_depend>rosidl_parser</test_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
